--- a/01_layout.html
+++ b/01_layout.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="굴벌의 연습장" />
     <meta
       property="og:description"
-      content="안녕하세요, 성장하는 백엔드 개발자 [조현우]입니다"
+      content="안녕하세요, 성장하는 백엔드 개발자 조현우입니다"
     />
     <link rel="icon" href="./favicon/favicon.ico" sizes="any" />
     <link
@@ -30,6 +30,7 @@
     />
     <link rel="manifest" href="./favicon/site.webmanifest" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="./img/thumbnail.png" />
     <style>
       * {
         box-sizing: border-box;
@@ -37,28 +38,38 @@
 
       p {
         font-family: Paperozi;
-        color: #2e8b57;
+        color: #f5f4f1;
       }
 
       .title {
-        font-family: Yeongwol;
+        font-family: Paperozi;
         color: #ffffff;
       }
       body {
+        display: flex;
         background-color: #2d2d2d;
-        margin: 0;
+        gap: 24px;
+        flex-direction: column;
       }
       body > section {
-        padding: 24px;
+        padding: 0 24px;
+        max-width: 640px;
+        width: 100%;
+        margin: auto;
+      }
+      h2 {
+        color: #e0e0e0;
+        margin-top: 0;
+      }
+      h3 {
+        color: #e0e0e0;
       }
       .box {
         background-color: #454545;
         padding: 24px;
         border-radius: 5px;
       }
-      #intro {
-        padding: 24px;
-      }
+
       #intro .title {
         text-align: center;
       }
@@ -92,21 +103,41 @@
         background-color: white;
         border: 5px transparent solid;
       }
+      #portfoilio .box > div {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+      }
+      #portfoilio .item {
+        background-color: #1e1e1e;
+        width: 100%;
+        height: 128px;
+        border-radius: 8px;
+        border: 1px transparent solid;
+        padding: 0 16px;
+      }
     </style>
   </head>
   <body>
     <section id="intro">
       <!-- UI/UX 구성 -->
+      <!-- 제목 -->
       <h1 class="title">
-        안녕하세요, <br />성장하는 백엔드 개발자 <br />[조현우]입니다
+        안녕하세요, <br />성장하는 백엔드 개발자 <br /><strong>[조현우]</strong
+        >입니다
       </h1>
+      <!-- 자기소개 -->
       <section class="box">
-        <p>안녕하세요, 성장하는 백엔드 개발자 <strong>조현우</strong>입니다</p>
-        <p>안녕하세요, 성장하는 백엔드 개발자[조현우]입니다</p>
+        <p>
+          꾸준히 성장하는 백엔드 개발자 [조현우]의 포트폴리오입니다. 안정적인
+          시스템과 더 나은 사용자 가치를 만들기 위한 열정과 고민을 담았습니다.
+        </p>
       </section>
     </section>
+    <!-- 기술 스택 -->
     <section id="tech-stack">
       <section class="box">
+        <h2>💻기술 스택</h2>
         <ul>
           <li><img src="./img/java-svgrepo-com.svg" alt="" /></li>
           <li><img src="./img/spring-svgrepo-com.svg" alt="" /></li>
@@ -114,6 +145,31 @@
           <li><img src="./img/aws-svgrepo-com.svg" alt="" /></li>
           <li><img src="./img/github-142-svgrepo-com.svg" alt="" /></li>
         </ul>
+      </section>
+    </section>
+    <section id="portfoilio">
+      <section class="box">
+        <h2>📚포트폴리오</h2>
+        <div>
+          <div class="item">
+            <h3>여행 추천 프로젝트</h3>
+            <p>사용자의 취향에 맞는 여행지를 추천해주는 서비스입니다.</p>
+          </div>
+          <div class="item">
+            <h3>재능 매칭 프로젝트</h3>
+            <p>
+              자신의 재능을 공유하고 다른 사람의 재능을 배울 수 있는
+              플랫폼입니다.
+            </p>
+          </div>
+          <div class="item">
+            <h3>AWS 인프라 프로젝트</h3>
+            <p>
+              AWS 서비스를 이용하여 확장 가능하고 안정적인 인프라를 구축한
+              경험입니다.
+            </p>
+          </div>
+        </div>
       </section>
     </section>
   </body>
