--- a/01_layout.html
+++ b/01_layout.html
@@ -30,7 +30,10 @@
     />
     <link rel="manifest" href="./favicon/site.webmanifest" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:image" content="./img/thumbnail.png" />
+    <meta
+      property="og:image"
+      content="https://github.com/Chomeco/250916_css2/blob/main/img/thumbnail.png"
+    />
     <style>
       * {
         box-sizing: border-box;
