--- a/01_layout.html
+++ b/01_layout.html
@@ -10,6 +10,8 @@
       property="og:description"
       content="안녕하세요, 성장하는 백엔드 개발자 조현우입니다"
     />
+    <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="./img/thumbnail.png" />
     <link rel="icon" href="./favicon/favicon.ico" sizes="any" />
     <link
       rel="apple-touch-icon"
@@ -29,11 +31,7 @@
       href="./favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="./favicon/site.webmanifest" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      property="og:image"
-      content="https://github.com/Chomeco/250916_css2/blob/main/img/thumbnail.png"
-    />
+
     <style>
       * {
         box-sizing: border-box;
@@ -65,7 +63,7 @@
         margin-top: 0;
       }
       h3 {
-        color: #e0e0e0;
+        color: #2d2d2d;
       }
       .box {
         background-color: #454545;
