--- a/01_layout.html
+++ b/01_layout.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>굴벌의 연습장</title>
     <link rel="stylesheet" href="font.css" />
-    <meta property="og:title" content="굴벌의 연습장" />
+    <meta property="og:title" content="조현우의 연습장" />
     <meta
       property="og:description"
       content="안녕하세요, 성장하는 백엔드 개발자 조현우입니다"
     />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:image" content="./img/thumbnail.png" />
+    <meta
+      property="og:image"
+      content="https://chomeco.github.io/250916_css2/img/thumbnail.png"
+    />
     <link rel="icon" href="./favicon/favicon.ico" sizes="any" />
     <link
       rel="apple-touch-icon"
