--- a/01_layout.html
+++ b/01_layout.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       property="og:image"
-      content="https://chomeco.github.io/250916_css2/img/thumbnail.png"
+      content="https://chomeco.github.io/250916_css2/img/thumbnail.png?v=2"
     />
     <link rel="icon" href="./favicon/favicon.ico" sizes="any" />
     <link
