--- a/01_layout.html
+++ b/01_layout.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       property="og:image"
-      content="https://chomeco.github.io/250916_css2/img/thumbnail.png?v=2"
+      content="https://chomeco.github.io/250916_css2/img/preview.png"
     />
     <link rel="icon" href="./favicon/favicon.ico" sizes="any" />
     <link
@@ -34,93 +34,6 @@
       href="./favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="./favicon/site.webmanifest" />
-
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-
-      p {
-        font-family: Paperozi;
-        color: #f5f4f1;
-      }
-
-      .title {
-        font-family: Paperozi;
-        color: #ffffff;
-      }
-      body {
-        display: flex;
-        background-color: #2d2d2d;
-        gap: 24px;
-        flex-direction: column;
-      }
-      body > section {
-        padding: 0 24px;
-        max-width: 640px;
-        width: 100%;
-        margin: auto;
-      }
-      h2 {
-        color: #e0e0e0;
-        margin-top: 0;
-      }
-      h3 {
-        color: #2d2d2d;
-      }
-      .box {
-        background-color: #454545;
-        padding: 24px;
-        border-radius: 5px;
-      }
-
-      #intro .title {
-        text-align: center;
-      }
-      #intro div {
-        line-height: 1.5;
-      }
-      #tech-stack ul {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 24px;
-        justify-content: center;
-        margin: 0;
-        padding: 0;
-      }
-      #tech-stack li {
-        list-style: none;
-        width: 128px;
-        aspect-ratio: 1;
-        background-color: #1e1e1e;
-        border-radius: 5px;
-        border: 1px transparent solid;
-        padding: 4px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      #tech-stack img {
-        width: 90%;
-        height: 90%;
-        border-radius: 50%;
-        background-color: white;
-        border: 5px transparent solid;
-      }
-      #portfoilio .box > div {
-        display: flex;
-        flex-direction: column;
-        gap: 24px;
-      }
-      #portfoilio .item {
-        background-color: #1e1e1e;
-        width: 100%;
-        height: 128px;
-        border-radius: 8px;
-        border: 1px transparent solid;
-        padding: 0 16px;
-      }
-    </style>
   </head>
   <body>
     <section id="intro">
