--- a/01_layout.html
+++ b/01_layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>굴벌의 연습장</title>
-    <link rel="stylesheet" href="font.css" />
+    <link rel="stylesheet" href="./font.css" />
     <meta property="og:title" content="조현우의 연습장" />
     <meta
       property="og:description"
